Backport to Java 11