@@ -9,6 +9,7 @@ import io.github.tnas.introspectorfilter.model.Post;
 
 import java.util.List;
 import java.util.Random;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class PostFactory {
@@ -24,15 +25,15 @@ public class PostFactory {
 					
 					var comments = IntStream.range(0, commentsPerPost)
 							.mapToObj(j -> new Comment((long) i * commentsPerPost + j, faker.book().publisher()))
-							.toList();
+							.collect(Collectors.toList());
 					var hashtags = IntStream.rangeClosed(1, numHashtags)
-							.mapToObj(k -> faker.ancient().hero()).toList();
+							.mapToObj(k -> faker.ancient().hero()).collect(Collectors.toList());
 					
 					return new Post(i, hashtags, comments, 
 							new Author(i, faker.name().name(), 
 									new Address(i, faker.address().country(), faker.address().city(), faker.address().streetName())),
 							faker.lorem().paragraph(), faker.number().randomDigit());
-				}).toList();
+				}).collect(Collectors.toList());
 	}
 	
 	public static void printList(List<Post> postsCollection) {
