@@ -6,6 +6,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import java.util.List;
 import java.util.Objects;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.BeforeAll;
@@ -33,14 +34,14 @@ class IntrospectorFilterTest {
         var traditionalFilteredList = postsCollection.stream()
                 .filter(p -> Objects.isNull(p.getText()) ||
                         StringUtils.stripAccents(p.getText().trim().toLowerCase()).contains(textFilter.trim().toLowerCase()))
-                .toList();
+                .collect(Collectors.toList());
 
-    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, textFilter)).toList();
+    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, textFilter)).collect(Collectors.toList());
         assertEquals(traditionalFilteredList.size(), filteredList.size());
-        assertEquals(1, filteredList.getFirst().getId());
-        assertEquals(6, filteredList.getLast().getId());
-        assertEquals(1, traditionalFilteredList.getFirst().getId());
-        assertEquals(6, traditionalFilteredList.getLast().getId());
+        assertEquals(1, filteredList.get(0).getId());
+        assertEquals(6, filteredList.get(filteredList.size() - 1).getId());
+        assertEquals(1, traditionalFilteredList.get(0).getId());
+        assertEquals(6, traditionalFilteredList.get(traditionalFilteredList.size() - 1).getId());
     }
     
     @Test
@@ -53,15 +54,15 @@ class IntrospectorFilterTest {
                         p.getHashtags().stream().anyMatch(h ->
                                 StringUtils.stripAccents(h.trim().toLowerCase())
                                         .contains(textFilter.trim().toLowerCase())))
-                .toList();
+                .collect(Collectors.toList());
 
-    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, "Hecuba")).toList();
+    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, "Hecuba")).collect(Collectors.toList());
         assertEquals(traditionalFilteredList.size(), filteredList.size());
-        assertEquals(7, filteredList.getFirst().getId());
-        assertEquals("Mapin Publishing", filteredList.getFirst().getComments().getFirst().getReview());
+        assertEquals(7, filteredList.get(0).getId());
+        assertEquals("Mapin Publishing", filteredList.get(0).getComments().get(0).getReview());
 
-        assertEquals(7, traditionalFilteredList.getFirst().getId());
-        assertEquals("Mapin Publishing", traditionalFilteredList.getFirst().getComments().getFirst().getReview());
+        assertEquals(7, traditionalFilteredList.get(0).getId());
+        assertEquals("Mapin Publishing", traditionalFilteredList.get(0).getComments().get(0).getReview());
     }
     
     @Test
@@ -74,17 +75,17 @@ class IntrospectorFilterTest {
                         p.getComments().stream().anyMatch(c ->
                                 StringUtils.stripAccents(c.getReview().trim().toLowerCase())
                                         .contains(textFilter.trim().toLowerCase())))
-                .toList();
+                .collect(Collectors.toList());
 
-    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, "Harlequin")).toList();
+    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, "Harlequin")).collect(Collectors.toList());
         assertEquals(traditionalFilteredList.size(), filteredList.size());
-        assertEquals(3, filteredList.getFirst().getId());
+        assertEquals(3, filteredList.get(0).getId());
         assertEquals("United States Government Publishing Office",
-                filteredList.getFirst().getComments().getFirst().getReview());
+                filteredList.get(0).getComments().get(0).getReview());
 
-        assertEquals(3, traditionalFilteredList.getFirst().getId());
+        assertEquals(3, traditionalFilteredList.get(0).getId());
         assertEquals("United States Government Publishing Office",
-                traditionalFilteredList.getFirst().getComments().getFirst().getReview());
+                traditionalFilteredList.get(0).getComments().get(0).getReview());
     }
     
     @Test
@@ -94,44 +95,44 @@ class IntrospectorFilterTest {
 
         var traditionalFilteredList = postsCollection.stream()
                 .filter(p -> p.getRelevance() == textFilter)
-                .toList();
+                .collect(Collectors.toList());
 
-    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, 6)).toList();
+    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, 6)).collect(Collectors.toList());
         assertEquals(traditionalFilteredList.size(), filteredList.size());
-        assertEquals(1, filteredList.getFirst().getId());
-        assertEquals(4, filteredList.getLast().getId());
+        assertEquals(1, filteredList.get(0).getId());
+        assertEquals(4, filteredList.get(filteredList.size() - 1).getId());
 
-        assertEquals(1, traditionalFilteredList.getFirst().getId());
-        assertEquals(4, traditionalFilteredList.getLast().getId());
+        assertEquals(1, traditionalFilteredList.get(0).getId());
+        assertEquals(4, traditionalFilteredList.get(traditionalFilteredList.size() - 1).getId());
     }
     
     @Test
     void shouldFilterByAuthorName() {
-    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, "Berge")).toList();
+    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, "Berge")).collect(Collectors.toList());
         assertEquals(1, filteredList.size());
-        assertEquals(1, filteredList.getFirst().getId());
-        assertEquals("Amee Berge", filteredList.getFirst().getAuthor().getName());
+        assertEquals(1, filteredList.get(0).getId());
+        assertEquals("Amee Berge", filteredList.get(0).getAuthor().getName());
     }
     
     @Test
     void shouldFilterByCountryInAddress() {
-    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, "Kyrgyz Republic")).toList();
+    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, "Kyrgyz Republic")).collect(Collectors.toList());
         assertEquals(1, filteredList.size());
-        assertEquals(8, filteredList.getFirst().getId());
-        assertEquals("East Adrian", filteredList.getFirst().getAuthor().getAddress().getCity());
+        assertEquals(8, filteredList.get(0).getId());
+        assertEquals("East Adrian", filteredList.get(0).getAuthor().getAddress().getCity());
     }
     
     @Test
     void shouldFilterByLocationDescription() {
-    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, "Greens")).toList();
+    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, "Greens")).collect(Collectors.toList());
         assertEquals(1, filteredList.size());
-        assertEquals(8, filteredList.getFirst().getId());
-        assertEquals("Valentine Greens", filteredList.getFirst().getAuthor().getAddress().getDescription());
+        assertEquals(8, filteredList.get(0).getId());
+        assertEquals("Valentine Greens", filteredList.get(0).getAuthor().getAddress().getDescription());
     }
     
     @Test
     void shouldNotFilterIntegerIDNotFilterable() {
-    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, 9)).toList();
+    	var filteredList = postsCollection.stream().filter(p -> filter.filter(p, 9)).collect(Collectors.toList());
     	assertTrue(filteredList.isEmpty());
     }
 }
